// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Search Form as pill renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form rounded"
  >
    <div
      class="bcl-search-form__group"
    >
      <svg
        class="bcl-search-form__icon bi icon--xs"
      >
        <use
          xlink:href="#search"
        />
      </svg>
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="bcl-search-form__input ps-5 form-control"
        placeholder="Search"
        type="search"
      />
    </div>
  </form>
</jest>
`;

exports[`OE - Search Form renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form"
  >
    <div
      class="bcl-search-form__group"
    >
      <svg
        class="bcl-search-form__icon bi icon--xs"
      >
        <use
          xlink:href="#search"
        />
      </svg>
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="bcl-search-form__input ps-5 form-control"
        placeholder="Search"
        type="search"
      />
    </div>
  </form>
</jest>
`;

exports[`OE - Search Form with submit renders correctly 1`] = `
<jest>
  <form
    class="bcl-search-form submittable"
  >
    <div
      class="bcl-search-form__group"
    >
      <label
        class="form-label"
      >
        Search bar label
      </label>
      <input
        class="bcl-search-form__input form-control"
        placeholder="Search"
        type="search"
      />
      <button
        class="bcl-search-form__submit btn btn-primary btn-md"
        type="button"
      >
        <svg
          class="bi icon--xs"
        >
          <use
            xlink:href="#search"
          />
        </svg>
      </button>
    </div>
  </form>
</jest>
`;
